:heavy_plus_sign: add: dep - @typescript

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^18.16.1",
+    "typescript": "^5.0.4"
+  }
 }
