--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:dev": "nodemon --watch ./src/ --exec ts-node ./src/ -e ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
