--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.16.1",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
