--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start:dev": "nodemon --watch ./src/ --exec ts-node ./src/ -e ts",
     "husky:prepare": "husky install",
+    "husky:setup-hooks": "npx husky add .husky/pre-commit 'npx lint-staged'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
