:gear: sync: scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start:dev": "nodemon --watch ./src/ --exec ts-node ./src/ -e ts",
     "husky:prepare": "husky install",
     "husky:setup-hooks": "npx husky add .husky/pre-commit 'npx lint-staged'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./src/** --fix",
+    "pretty": "prettier --write --check ./src/**",
+    "precommit": "npm run lint-fix && npm run pretty",
+    "prepush": "npm run lint",
+    "test": "node --test"
   },
   "keywords": [],
   "author": "",
