--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.16.1",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
