--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
