--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pretty": "prettier --write --check ./src/**",
     "precommit": "npm run lint-fix && npm run pretty",
     "prepush": "npm run lint",
-    "test": "node --test"
+    "test": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "",
