:heavy_plus_sign: add: dep - tsc-alias

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
-    "start:dev": "nodemon --watch ./src/ --exec ts-node ./src/ -e ts",
+    "start:dev": "nodemon --watch ./src/ --exec ts-node -r tsconfig-paths/register ./src/ -e ts",
     "husky:prepare": "husky install",
     "husky:setup-hooks": "npx husky add .husky/pre-commit 'npx lint-staged'",
     "lint": "eslint ./src/** --fix",
@@ -31,6 +31,7 @@
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.5",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   },
