--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "coverage": "jest --coverage",
     "test": "jest --passWithNoTests --color",
     "test:dev": "jest --watchAll --color",
-    "test:staged": "jest --findRelatedTests  --color ."
+    "test:staged": "jest --findRelatedTests  --passWithNoTests --color ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.1",
     "eslint-config-prettier": "^8.8.0",
+    "express": "^4.18.2",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
