--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^18.16.1",
     "eslint-config-prettier": "^8.8.0",
     "express": "^4.18.2",
+    "git-commit-msg-linter": "^4.10.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
